force-app/main/default/objects/AI_System_Registry__c/AI_System_Registry__c.object-meta.xml
<CustomObject>
    <label>AI System Registry</label>
    <pluralLabel>AI System Registry</pluralLabel>
    <nameField>
        <label>AI System Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>