force-app/main/default/objects/AI_System_Registry__c/fields/Detection_Method__c.field-meta.xml
<CustomField>
    <fullName>Detection_Method__c</fullName>
    <label>Detection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata API Scan</fullName>
            </value>
            <value>
                <fullName>License Detection</fullName>
            </value>
            <value>
                <fullName>Audit Trail Analysis</fullName>
            </value>
            <value>
                <fullName>Manual Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>