force-app/main/default/objects/AI_System_Registry__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level (EU AI Act)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Minimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>