force-app/main/default/objects/AI_System_Registry__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einstein Prediction</fullName>
            </value>
            <value>
                <fullName>Einstein Bot</fullName>
            </value>
            <value>
                <fullName>GenAI Function</fullName>
            </value>
            <value>
                <fullName>GenAI Planner</fullName>
            </value>
            <value>
                <fullName>Custom ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>