force-app/main/default/objects/AI_System_Registry__c/fields/Use_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Description__c</fullName>
    <label>Use Case Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>